[package]
name = "vega-crypto"
version = "0.1.0"
authors = ["Emil Bay <github@tixz.dk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
lol_alloc = "0.3.0"
wasm-bindgen = "0.2.83"
ed25519-compact = { version = "2.0.4", default-features = false, features = [
  "opt_size",
] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
argon2 = { version = "0.5.0" }
